--- a/coolcafe/src/main/resources/application.properties
+++ b/coolcafe/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=coolcafe
 
-spring.datasource.url=jdbc:sqlserver://localhost\\MSSQLSERVER:1433;databaseName=HSF302_Project;encrypt=true;trustServerCertificate=true
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=HSF302_Project;encrypt=true;trustServerCertificate=true
 spring.datasource.username=sa
 spring.datasource.password=123
 
