--- a/coolcafe/src/main/resources/application.properties
+++ b/coolcafe/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=coolcafe
 
-spring.datasource.url=jdbc:sqlserver://localhost\\MSSQLSERVER:1433;databaseName=HSF302_Project;encrypt=true;trustServerCertificate=true
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=HSF302_Project;encrypt=true;trustServerCertificate=true
 spring.datasource.username=sa
-spring.datasource.password=123
+spring.datasource.password=12345
 
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
